# geometry-surface

./: CMakeLists.txt  code_courb.cpp  courbures.cpp  courbures.h  distrib.hpp  mesh_functions.cpp  mesh_functions.hpp  mesh_with_K.off  mesh_with_normal.off  mesh_with_principal_dirs.off  sample_quad.off
